<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:id="@+id/scrollView"
              android:background="@null">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:minWidth="1000dp"
        android:minHeight="1000dp"
        android:background="@null">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/optionAdViewContainer"
            android:background="@drawable/background_card"
            android:layout_margin="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">
        </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_card"
        android:layout_margin="20dp"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:gravity="center_horizontal">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/minusFps"
                android:background="@drawable/background_card_button"
                android:src="@drawable/ic_action_down_arrow"
                android:layout_gravity="center"

                android:layout_marginRight="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="10"
                android:id="@+id/fps_TextView"
                style="@style/CondensedTitle"
                android:textColor="#FFBB33"
                android:layout_gravity="center_horizontal|top"
                />

            <ImageButton
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="@drawable/background_card_button"
                android:src="@drawable/ic_action_up_arrow"
                android:id="@+id/addFps"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>

        <TextView
            style="@style/CondensedTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/fps"
            android:id="@+id/textView2"
            android:textColor="#CC0000"
            android:layout_gravity="center"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_card"
        android:layout_margin="20dp"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/quality"
            android:id="@+id/qualityTextView"
            style="@style/CondensedTitle"
            android:textColor="#33B5E5"
            android:gravity="center_horizontal"/>

        <SeekBar
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/qualitySeekBar"
            android:max="100"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/quality"
            android:id="@+id/textView"
            style="@style/CondensedTitle"
            android:textColor="#0099CC"
            android:layout_gravity="center"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_card"
        android:layout_margin="20dp"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeat"
            android:id="@+id/repeatCheckBox"
            style="@style/CondensedTitle"
            android:layout_gravity="center"
            android:focusable="true"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_card"
        android:layout_margin="20dp"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:gravity="center_horizontal"
        >

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vignette"
            android:id="@+id/vignetteCheckBox"
            style="@style/CondensedTitle"
            android:layout_gravity="center"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_card"
        android:layout_margin="20dp"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:gravity="center_horizontal"
        >
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/caption"
            android:id="@+id/captionCheckBox"
            style="@style/CondensedTitle"
            android:layout_gravity="center"/>

    </LinearLayout>
    </LinearLayout>


</ScrollView>